# fastapi-templates

./: .gitignore  LICENSE  manage.py  pyproject.toml  tasks.py
app/: app.py  config.py  mongo.py
app/dao/: base.py  user.py
app/middlewares/: auth.py
app/models/: base.py  user.py
app/routers/: dependencies.py  user.py
app/utils/: __init__.py  encryption.py  jwt.py  openapi.py  paging.py
statics/: localhost+2-key.pem  localhost+2.pem  spec.json
stubs/motor/: core.pyi  motor_asyncio.pyi
tests/: test_madforms.py
