[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lsongzhi <lsongzhi@163.com>"]

[[tool.poetry.source]]
name="tsinghua"
url="https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
email-validator = "^1.1.1"
aiodns = "^2.0.0"
python-multipart = "^0.0.5"
motor = "^2.1.0"
orjson = "^3.3.0"
click = "^7.1.2"
uvicorn = "^0.11.6"
pycryptodome = "^3.9.7"
attrdict = "^2.0.1"
python-jose = "^3.1.0"
cryptography = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fabric = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
